Cleaned up a bit
Still only does 10 at once, but at least the order is right.

--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ img {
 	height: 100px;
 	clip: rect(0px, 140px, 140px, 0px);
 }
+
+.thumb {
+	width: 200px;
+	height: 200px;
+	background-position: 50%;
+}
